--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,10 @@
 Version history
 ===============
 
+1.0.1 (2019-08-22):
+
+- fixed: scroll to top on backend correctly styled
+
 1.0 (2019-03-27):
 
 - added: initial version
