--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,10 @@
 Version history
 ===============
 
+2.0 (2021-09-27):
+
+- changed: updated for Elgg 4
+
 1.0.1 (2019-08-22):
 
 - fixed: scroll to top on backend correctly styled
