--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,10 @@
 Version history
 ===============
 
+3.0.1 (2023-07-26):
+
+- fixed: added discernible title to scroll to top link
+
 3.0 (2023-06-02):
 
 - changed: conflict with Elgg < 5.0
